@@ -1,6 +1,6 @@
 package org.openlca.core.database;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -15,65 +15,58 @@ public class RootEntityDao<T extends RootEntity, V extends RootDescriptor>
 		extends RefEntityDao<T, V> {
 
 	protected RootEntityDao(Class<T> entityType, Class<V> descriptorType,
-													IDatabase database) {
+			IDatabase database) {
 		super(entityType, descriptorType, database);
 	}
 
 	public List<V> getDescriptors(Optional<Category> category) {
-		String sql = getDescriptorQuery();
 		if (category.isPresent()) {
-			sql += " where f_category = ?";
-			List<Object[]> results = selectAll(sql, getDescriptorFields(),
-					Collections.singletonList(category.get().id));
-			return createDescriptors(results);
+			return queryDescriptors("where d.f_category = ?", category.get().id);
 		} else {
-			sql += " where f_category is null";
-			List<Object[]> results = selectAll(sql, getDescriptorFields(),
-					Collections.emptyList());
-			return createDescriptors(results);
+			return queryDescriptors("where d.f_category is null", List.of());
 		}
 	}
 
 	@Override
-	protected V createDescriptor(Object[] record) {
-		var d = super.createDescriptor(record);
-		if (d == null)
-			return null;
-		if (record[4] instanceof Number num) {
-			d.version = num.longValue();
+	protected List<V> queryDescriptors(String condition, List<Object> params) {
+		var sql = """
+					select
+						d.id,
+				   	d.ref_id,
+				   	d.name,
+				   	d.version,
+				   	d.last_change,
+				   	d.f_category,
+				   	d.library,
+				   	d.tags from
+				""" + getEntityTable() + " d";
+		if (condition != null) {
+			sql += " " + condition;
 		}
-		if (record[5] instanceof Number num) {
-			d.lastChange = num.longValue();
-		}
-		if (record[6] != null) {
-			d.category = (Long) record[6];
-		}
-		if (record[7] != null) {
-			d.library = (String) record[7];
-		}
-		if (record[8] != null) {
-			d.tags = (String) record[8];
-		}
-		return d;
-	}
 
-	@Override
-	protected String[] getDescriptorFields() {
-		return new String[]{
-				"id",
-				"ref_id",
-				"name",
-				"description",
-				"version",
-				"last_change",
-				"f_category",
-				"library",
-				"tags",
-		};
+		var cons = descriptorConstructor();
+		var list = new ArrayList<V>();
+		NativeSql.on(db).query(sql, params, r -> {
+			var d = cons.get();
+			d.id = r.getLong(1);
+			d.refId = r.getString(2);
+			d.name = r.getString(3);
+			d.version = r.getLong(4);
+			d.lastChange = r.getLong(5);
+			var catId = r.getLong(6);
+			if (!r.wasNull()) {
+				d.category = catId;
+			}
+			d.library = r.getString(7);
+			d.tags = r.getString(8);
+			list.add(d);
+			return true;
+		});
+		return list;
 	}
 
 	public RootDescriptor updateCategory(RootDescriptor model,
-																			 Optional<Category> category) {
+			Optional<Category> category) {
 		Version v = new Version(model.version);
 		v.incUpdate();
 		long version = v.getValue();
